# LTL-Model-Checking

./: .gitignore  README.md
docs/: requirement.md
src/: CMakeLists.txt  main.cpp
src/formula/: formula.hpp
src/parser/: LTL.g4  LTL.interp  LTL.tokens  LTLBaseListener.cpp  LTLBaseListener.h  LTLBaseVisitor.cpp  LTLBaseVisitor.h  LTLLexer.cpp  LTLLexer.h  LTLLexer.interp  LTLListener.cpp  LTLListener.h  LTLParser.cpp  LTLParser.h  LTLVisitor.cpp  LTLVisitor.h  generate.sh
src/transition_system/: ap.hpp
src/utils/: automata.hpp  check.hpp  exception.hpp  formula.hpp  ts.hpp
testcases/: 1-LTL-formulas.txt  1-TS.txt  2-LTL-formulas.txt  2-TS.txt
